git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1123 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/comdiasentrega/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/comdiasentrega/startup.vm
@@ -60,10 +60,10 @@
 							<td width="20"></td>
 							
 							<td width="25"><img src="../../img/catalogo/calendario.png" align="top"></td>
-							<td width="90"><input type="text" name="fecha_inicial" style="width:90px;"></td>
+							<td width="90"><input type="text" name="fecha_inicial" style="width:90px;" readOnly="true"></td>
 							<td width="15"></td>
 							<td width="25"><img src="../../img/catalogo/calendario.png" align="top"></td>
-							<td width="90"><input type="text" name="fecha_final" style="width:90px;"></td>
+							<td width="90"><input type="text" name="fecha_final" style="width:90px;" readOnly="true"></td>
 							
 							<td width="20" class="proveedor"></td>
 							<td width="300" class="proveedor">
