--- a/erp-quimicos/src/main/webapp/vm/crmrepclientes/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmrepclientes/startup.vm
@@ -4,14 +4,10 @@
         <title>${title}</title>
 
         #include("${layoutheader}")
-
-
-
+        
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
         <script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
-
-
 
         <script type="text/javascript" src="../../js/implements/repclientes/index.js" ></script>
 
@@ -40,19 +36,18 @@
 						</tr>
 						<tr>
 							<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-							<td width="180">Agentes:</td>
+							<td width="180">Agentes</td>
 							<td width="30">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 							<td width="30">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 							<td width="50"></td>
 							<td width="15"></td>
 							<td width="50"></td>
 						</tr>
-
 						<tr>
 							<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 							<td width="180">
 								<select name="select_agentes" style="width:180px;" title="Filtro por Agente">
-										<option value="0" selected="yes">[--Todos--]</option>
+									<option value="0" selected="yes">[--Todos--]</option>
 								</select>
 							</td>
 							<td width="15">&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -71,37 +66,10 @@
             </tr>
             <tr>
                 <td>&nbsp;&nbsp;</td>
-                <td>
-					<div id="lista_clientes" width="100%">
-						<table  cellspacing="0" >
-
-							<tbody>
-
-
-							</tbody>
-							<tfoot>
-							</tfoot>
-						</table>
-					</div>
-                </td>
+                <td><div id="divreporte"> </div></td>
             </tr>
 	</table>
-
-
-
-
-
-
-        </form>
-
-
-
-
-
-
-
-
-
+	</form>
 
         #include("${layoutfooter}")
 
