git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1146 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -517,6 +517,12 @@
 													<li><a href="../tipopolizas/startup.agnux">Tipos de P&oacute;liza</a></li>
 												</ul>
 											</li>
+											<li>
+												<a href="#" class="sub">Reportes &raquo;</a>
+												<ul>
+													<li class="topline"><a href="../ctbrepauxcta/startup.agnux">Auxiliar de Cuentas</a></li>
+												</ul>
+											</li>
 										</ul>
 									</li>
 									
@@ -555,7 +561,7 @@
 												</ul>
 											</li>
 											<li>
-												<a href="#" class="sub">Reportes</a>
+												<a href="#" class="sub">Reportes &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../crmreportevisitas/startup.agnux">Visitas</a></li>
 												</ul>
