git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1155 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/repventasnetasproductofactura/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/repventasnetasproductofactura/startup.vm
@@ -169,7 +169,7 @@
             <tr>
                 <td >&nbsp;&nbsp;</td>
                 <td >
-                    <div id="ventasnetasproductofactura" width="100%" > </div>
+                    <div id="ventasnetasproductofactura" width="1300" > </div>
                 </td>
             </tr>
 
