--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -376,7 +376,7 @@
 													-->
 													
 													<li class="topline"><a href="../invcontrolcostos/startup.agnux">Control de Costos</a></li>
-													<li class="topline"><a href="../invactualizaprecios/startup.agnux">Actualizar de Precios</a></li>
+													<li class="topline"><a href="../invactualizaprecios/startup.agnux">Actualizar Precios</a></li>
 													
 													<!--
 													<li class="topline"><a href="#">Actualizar Precios</a></li>
