--- a/erp-quimicos/src/main/webapp/vm/repestadisticaanualventasproducto/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/repestadisticaanualventasproducto/startup.vm
@@ -33,10 +33,12 @@
                 <td style="background-color:#ffffff;" >
 					<table id="busqueda" border="0" >
 						<tr>
-							<td colspan="14" height="8"></td>
+							<td colspan="16" height="8"></td>
 						</tr>
 						<tr>
 							<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+							<td width="70">A&ntilde;o</td>
+							<td width="20"></td>
 							<td width="100">Mes&nbsp;Inicial</td>
 							<td width="20"></td>
 							<td width="100">Mes&nbsp;Final</td>
@@ -54,6 +56,8 @@
 						
 						<tr>
 							<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+							<td width="70"><select name="select_ano" style="width:70px;"></select></td>
+							<td width="20"></td>
 							<td width="110">
 								<select name="mes_inicial" id="mes_in"style="width:110px;" title="Mes Inicial">
 									<!--<option value="0">- Seleccionar -</option>  
