--- a/erp-quimicos/src/main/webapp/vm/repestadisticasanualesventas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/repestadisticasanualesventas/startup.vm
@@ -33,18 +33,20 @@
                 <td style="background-color:#ffffff;" >
 					<table id="busqueda" border="0" >
 						<tr>
-							<td colspan="16" height="8"></td>
+							<td colspan="19" height="8"></td>
 						</tr>
 						<tr>
 							<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-							<td width="100">Mes Inicial</td>
+							<td width="70">A&ntilde;o</td>
+							<td width="20"></td>
+							<td width="130">Mes Inicial</td>
 							<td width="20"></td>
 							<td width="20"></td>
-                                                        <td width="100">Mes Final</td>
+							<td width="130">Mes Final</td>
 							<td width="24"></td>
 							<td width="20">&nbsp;</td>
 							<td width="25"></td>
-                                                        <td></td>
+							<td></td>
 							<td colspan="1"></td>
 							<td width="25">&nbsp;&nbsp;&nbsp;</td>
 							<td colspan="1"></td>
@@ -55,10 +57,12 @@
 						
 						<tr>
 							<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+							<td width="70"><select name="select_ano" style="width:70px;"></select></td>
+							<td width="20"></td>
 							<td width="130"><SELECT NAME="mes_inicial" id="mes_in"style="width:130px;" title="Mes Inicial"></select></td>
 							<td width="20"></td>
 							<td width="20"></td>
-							<td width="100"><SELECT NAME="mes_final" id="mes_fin" style="width:130px;" title="Mes Final"></select></td>
+							<td width="130"><SELECT NAME="mes_final" id="mes_fin" style="width:130px;" title="Mes Final"></select></td>
 							<td width="10"></td>
 							<td width="10"></td>
 							<td></td>
