--- a/erp-quimicos/src/main/webapp/vm/clients/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/clients/startup.vm
@@ -190,7 +190,7 @@
 												<td colspan="7"><INPUT TYPE="text" name="calle" style="width:410px;"></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_calle"></div></td>
 												<td width="5"></td>
-												<td width="75">No.&nbsp;Interior</td>
+												<td width="75">No.&nbsp;Exterior</td>
 												<td width="5"></td>
 												<td width="150"><INPUT TYPE="text" name="numero_int" style="width:150px;"></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_numeroint"></div></td>
@@ -205,7 +205,7 @@
 												<td colspan="7"><INPUT TYPE="text" name="entrecalles" style="width:410px;"></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_entrecalles"></div></td>
 												<td width="5"></td>
-												<td width="75">No.&nbsp;Exterior</td>
+												<td width="75">No.Interior&nbsp;</td>
 												<td width="5"></td>
 												<td width="150"><INPUT TYPE="text" name="numero_ext" style="width:150px;"></td>
 												<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_numeroext"></td>
