--- a/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/pocpedidos/startup.vm
@@ -188,15 +188,15 @@
                                 <div class="fixed column" class="content_x" >
 									
                                     <div id="tabx-1" class="contenidoPes" >
-                                        <table border="0" style="margin:0; padding:0;">
+                                        <table border="1" style="margin:0; padding:0;">
                                                 <tr>
-                                                    <td width="520"></td>
+                                                    <td width="625"></td>
                                                     <td width="10"></td>
-                                                    <td width="90"></td>
-                                                    <td width="260"></td>
+                                                    <td width="140"></td>
+                                                    <td width="325"></td>
                                                 </tr>
                                                 <tr>
-                                                    <td valign="top" width="520"  > 
+                                                    <td valign="top" width="625"  > 
                                                         <table border="0" class="gral">
                                                             <tr>
                                                                 <td width="10"></td>
@@ -237,7 +237,7 @@
                                                     <td width="10"></td>
                                                     <!--<td width="60"></td>-->
 													
-                                                    <td width="350" colspan="2" valign="top" >
+                                                    <td width="465" colspan="2" valign="top" >
                                                         <table border="0">
                                                             <tr>
                                                                 <td width="10"></td>
@@ -429,20 +429,24 @@
 														<table class="tabla_header_grid">
 															<thead>
 																<tr>
-																	<td class="grid" id="td_eliminar" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="61"><div class="delete">&nbsp;#</div></td>
+																	<td class="grid" id="td_eliminar" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="60"><div class="delete">&nbsp;#</div></td>
 																	<td class="grid" id="td_sku" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="116">&nbsp;C&oacute;digo</td>
-																	<td class="grid" id="td_nombre" style="background-color: rgb(180, 180, 180);"  width="202">&nbsp;Descripci&oacute;n</td>
+																	<td class="grid" id="td_nombre" style="background-color: rgb(180, 180, 180);"  width="200">&nbsp;Descripci&oacute;n</td>
 																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Unidad</td>
 																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="100">&nbsp;Presentaci&oacute;n</td>
 																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="80">&nbsp;Cantidad</td>
 																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Precio&nbsp;unitario</td>
 																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Importe</td>
+																	
+																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="60">&nbsp;%&nbsp;IEPS</td>
+																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="80">&nbsp;Monto IEPS</td>
+																	
 																	<td class="grid" id="td_oculto" style="background-color: rgb(180, 180, 180);" width="80">&nbsp;Producci&oacute;n</td>
-																	<td class="grid" id="td_oculto" style="background-color: rgb(180, 180, 180);" width="36">&nbsp;</td>
+																	<td class="grid" id="td_oculto" style="background-color: rgb(180, 180, 180);" width="40">&nbsp;</td>
 																</tr>
 															</thead>
 														</table>
-														<div class="contenedor_grid" style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:870; height: 115px; border:1px solid #C1DAD7 !important;">	
+														<div class="contenedor_grid" style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:1020; height: 115px; border:1px solid #C1DAD7 !important;">	
 															<table class="tabla_facturas">
 																<tbody style="background-color: #FFFFFF;" valign="top" id="grid_productos">
 																	
@@ -454,11 +458,11 @@
                                                 </tr>
 												
                                                 <tr>
-                                                    <td colspan="3" width="620"  align="left" valign="top">
+                                                    <td colspan="3" width="775"  align="left" valign="top">
 														
                                                         <div id="div_warning_grid" style="display:none;">
 															
-                                                            <table border ="0">
+                                                            <table border ="1">
                                                                 <tr>
                                                                     <td width="10"></td>
                                                                     <td  colspan="4"><div style="color:#d41000;">&nbsp;&nbsp;Datos&nbsp;no&nbsp;validos</div></td>
@@ -487,22 +491,27 @@
                                                             </table>
                                                         </div>
                                                     </td>
-                                                    <td  width="260" align="right" valign="top" style="font-weight: bold;">
-                                                        <table border ="0" width="260" class="gral">
+                                                    <td  width="325" align="right" valign="top" style="font-weight: bold;">
+                                                        <table border ="0" width="320" class="gral">
                                                             <!--<tr><td colspan="3" height="2"></td></tr>-->
                                                             <tr>
                                                                 <td width="80"></td>
                                                                 <td width="60">Subtotal</td>
                                                                 <td width="120"><input type="text" name="subtotal" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
                                                             </tr>
-                                                            <tr>
+                                                            <tr id="tr_ieps">
                                                                 <td width="80"></td>
-                                                                <td width="60">Impuesto</td>
-                                                                <td width="120"><input type="text" name="impuesto" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
+                                                                <td width="60">IEPS</td>
+                                                                <td width="120"><input type="text" name="ieps" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
                                                             </tr>
                                                             <tr>
                                                                 <td width="80"></td>
-                                                                <td width="60">Retenido</td>
+                                                                <td width="60">IVA</td>
+                                                                <td width="120"><input type="text" name="impuesto" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
+                                                            </tr>
+                                                            <tr id="tr_retencion">
+                                                                <td width="80"></td>
+                                                                <td width="60">Retenci&oacute;n</td>
                                                                 <td width="120"><input type="text" name="impuesto_retenido" value="0" style="width:120px; text-align:right;" readOnly="true"></td>
                                                             </tr>
                                                             <tr>
@@ -834,10 +843,10 @@
                             </div>
 							
 							
-                            <div class="fixed column" id="div_botones" style="width:886px; background:; text-align:right; padding-left:; position:absolute; margin-top:4px;">
+                            <div class="fixed column" id="div_botones" style="width:1036px; background:; text-align:right; padding-left:; position:absolute; margin-top:4px;">
 								<table border="0" class="tabla_botones">
 									<tr>
-										<td width="786" class="td_left"></td>
+										<td width="936" class="td_left"></td>
 										<td>
 											<input type="image" src="../../img/modalbox/btn1.png" id="submit" style="width:77px; height:24px;"/>
 										</td>
