--- a/erp-quimicos/src/main/webapp/css/modalbox/prefacturas/formaPrefactura.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/prefacturas/formaPrefactura.css
@@ -102,7 +102,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .prefacturas_div_one{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
-    width:1073px;
+    width:1203px;
     height:550px;
 /*  background-color:#D1D2D4;
     border:2px solid #313E74;*/
@@ -116,7 +116,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 .prefacturas_div_two{
     /*font-family:tahoma;*/
-    width:1073px;
+    width:1203px;
     height:28px;
     /*background-color:#2F3D73;*/
     background-color:#454442;
@@ -132,7 +132,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .prefacturas_div_three{
     /*font-family:tahoma;*/
     font-size:11px;
-    width:1063px;
+    /*width:1183px;*/
     height:48px;
     /*background-color:#D1D2D4;*/
     background-color:#e9e9e9;
