git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1170 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -659,6 +659,7 @@
 													<li><a href="../gralcateg/startup.agnux">Categor&iacute;as</a></li>
 													<li><a href="../graldeptos/startup.agnux">Departamentos</a></li>
 													<li><a href="../graldeptosturnos/startup.agnux">Turnos</a></li>
+													<li><a href="../gralieps/startup.agnux">IEPS</a></li>
 												</ul>
 											</li>
 
